[package]
name = "trc"
edition = "2024"
version = "0.0.1"

[dependencies]
ahash = "0.8.11"
base64 = "0.22.1"
compact_str = "0.9.0"
parking_lot = "0.12.3"
rtrb = "0.3.1"
serde = "1.0"
serde_json = "1.0.120"

[dependencies.event_macro]
path = "./event-macro"

[dependencies.mail-auth]
version = "0.7.1"

[dependencies.mail-parser]
version = "0.11"
features = ["full_encoding"]

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls-webpki-roots", "http2"]
default-features = false

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.tokio]
version = "1.47"
features = ["net", "macros"]

[dev-dependencies]

[features]
enterprise = []
test_mode = []

[lib]
path = "src/lib.rs"
name = "trc"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
