[package]
name = "utils"
edition = "2024"
version = "0.0.1"

[dependencies]
base64 = "0.22"
blake3 = "1.3.3"
chrono = "0.4"
compact_str = "0.9.0"
farmhash = "1.1.5"
fast-float = "0.2.0"
form_urlencoded = "1.1.0"
futures = "0.3"
http-body-util = "0.1.0"
nohash-hasher = "0.2.0"
parking_lot = "0.12"
pem = "3.0"
psl = "2"
quick_cache = "0.6.9"
rand = "0.9.0"
rcgen = "0.14"
regex = "1.7.0"
rustls-pemfile = "2.0"
serde_json = "1.0"
x509-parser = "0.18"

[dependencies.ahash]
version = "0.8"
features = ["serde"]

[dependencies.mail-auth]
version = "0.7.1"

[dependencies.mail-send]
version = "0.5"
features = ["cram-md5", "ring", "tls12"]
default-features = false

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls-webpki-roots", "http2", "stream"]
default-features = false

[dependencies.ring]
version = "0.17"

[dependencies.rkyv]
version = "0.8.10"
features = ["little_endian"]

[dependencies.rustls]
version = "0.23.5"
features = ["std", "ring", "tls12"]
default-features = false

[dependencies.rustls-pki-types]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smtp-proto]
version = "0.2"

[dependencies.tokio]
version = "1.47"
features = ["net", "macros", "signal"]

[dependencies.tokio-rustls]
version = "0.26"
features = ["ring", "tls12"]
default-features = false

[dependencies.trc]
path = "../trc"

[dependencies.webpki-roots]
version = "1.0"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies.tokio]
version = "1.47"
features = ["full"]

[target."cfg(unix)".dependencies]
privdrop = "0.5.3"

[target."cfg(unix)".dev-dependencies]

[target."cfg(unix)".build-dependencies]

[features]
test_mode = []

[lib]
path = "src/lib.rs"
name = "utils"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
