[package]
name = "event_macro"
edition = "2024"
version = "0.0.1"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["full"]

[lib]
path = "src/lib.rs"
name = "event_macro"
plugin = false
proc-macro = true
edition = "2024"
required-features = []
crate-type = ["lib"]
